# Streamio

./: .gitignore  README.md
api/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/config/: index.ts
api/src/database/: index.ts
api/src/middleware/: auth.ts  errorHandler.ts  index.ts
api/src/routes/: auth.ts  billing.ts  history.ts  index.ts  internal.ts  library.ts  metadata.ts  profiles.ts  sync.ts  user.ts
api/src/services/: index.ts
api/src/types/: index.ts
api/src/utils/: crypto.ts  errors.ts  index.ts  validation.ts
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/mpv/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AudioTrackSelector.css  AudioTrackSelector.tsx  ContinueWatching.css  ContinueWatching.tsx  EmbeddedMpvPlayer.css  EmbeddedMpvPlayer.tsx  HeroBanner.css  HeroBanner.tsx  Layout.css  Layout.tsx  MediaCard.css  MediaCard.tsx  MediaRow.css  MediaRow.tsx  StreamConfirmPopup.css  StreamConfirmPopup.tsx  SubtitleOverlay.css  SubtitleOverlay.tsx  SubtitleSelector.css  SubtitleSelector.tsx  UpgradePrompt.css  UpgradePrompt.tsx  index.ts
desktop/src/hooks/: useFeatureGate.ts
desktop/src/pages/: DetailsPage.css  DetailsPage.tsx  HomePage.css  HomePage.tsx  LibraryPage.css  LibraryPage.tsx  LoginPage.css  LoginPage.tsx  PlayerPage.css  (+8 more)
(+44 files in other folders)
