[package]
name = "vreamio"
version = "1.0.0"
description = "Vreamio Desktop - Cross-platform streaming app"
authors = ["Vreamio"]
edition = "2021"

[lib]
name = "vreamio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-libmpv = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
